# crowd-counter

./: .gitignore  LOG.md  README.md  claude.md  pyproject.toml  run.sh
app/: index.html  package-lock.json  package.json
app/data/: collections.json
app/sidecar/: registry.py  server.py
app/src/: App.css  App.tsx  index.css  main.tsx
app/src-tauri/: tauri.conf.json
app/src-tauri/src/: lib.rs  sidecar.rs
app/src/api/: client.ts  types.ts
app/src/canvas/: AnnotationCanvas.tsx  density.ts
app/src/components/: CollectionExplorer.tsx  Inspector.tsx  Topbar.tsx
app/src/state/: selection.ts
app/src/views/: AnnotateView.tsx  LiveView.tsx
core/: fetcher.py  inference.py
core/model/: __init__.py
crowdcounter/: __main__.py  server.py  videos.py
crowdcounter/core/: clustering.py  dataset.py  detector.py  fetcher.py  inference.py  paths.py
crowdcounter/core/model/: __init__.py  p2pnet.py
crowdcounter/world/: pose_estimator.py  projection.py  telemetry.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/lib/: types.ts
web/src/lib/live/: DetectionList.svelte  HUD.svelte  Inspector.svelte  LiveView.svelte  SourceList.svelte  Timeline.svelte  TrackMap.svelte  VideoCanvas.svelte
web/src/lib/stores/: stream.svelte.ts
