[project]
name = "crowd-counter"
version = "0.1.0"
description = "Crowd counting + density mapping with a Tauri annotation UI"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "numpy>=1.26,<2.0",
    "opencv-python-headless>=4.10",
    "pillow>=10.4",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "platformdirs>=4.3",
    "torch>=2.5",
    "torchvision>=0.20",
    "pywebview>=5.4",
    "websockets>=16.0",
    "perspective2d",
    "imageio>=2.37.3",
]

[tool.uv]
package = false

[tool.uv.sources]
perspective2d = { git = "https://github.com/jinlinyi/PerspectiveFields.git" }

[tool.hatch.build.targets.wheel]
packages = ["crowdcounter"]
